--- a/english/windsurf/index.html
+++ b/english/windsurf/index.html
@@ -8,15 +8,14 @@ I find many practical similarities between windsurfing and life. For me,
 sailing is a blend of sport and an artistic form of expression.
 <br /><br />
 <u>Key concepts include:</u>
-Things that might seem like adversity or a challenge (such as the current, the wind, or other environmental factors) can, in fact, be leveraged for progress. This largely depends on elements like:
+Things that might seem like adversity or a challenge (such as the current, 
+the wind, or other environmental factors) can, in fact, be leveraged for progress. This largely depends on elements like:
 <br /><br />
 <li><b>Skill</b>: Having the necessary physical or mental aptitudes.</li>
 <li><b>Attitude</b>: Possessing the willpower, the inner desire, and courage when facing a situation.</li>
 <li><b>Knowledge</b>: No matter how much skill and attitude we have, we won't acquire new knowledge 
 in the middle of a storm if we don't already possess it.
 </li>
-
-<br />
 <br />
 <img src="100_0290.jpg" width=300 />
 <img src="100_0291.jpg" width=300 />
