--- a/spanish/windsurf/index.html
+++ b/spanish/windsurf/index.html
@@ -5,16 +5,16 @@
 <td>
 <h1>Windsurfing</h1>
 Encuentro en el Windsurf muchas similitudes prácticas con la vida y navegar es como
-una mezcla de deporte y medio de expresión artístico.<br />
+una mezcla de deporte y medio de expresión artístico.<br /><br />
 <u>Conceptos como:</u>
 Aquello que puede representar una adversidad o un problema (por ejemplo la corriente, 
 el viento, factores ambientales) pueden
 tambien ser utilizados para progresar y todo depende por ejemplo de:
+<br /><br />
 <li><b>Habilidad</b>: Tener las aptitudes fisicas o mentales necesarias.</li>
 <li><b>Actitud ante la situacion</b>: Poseer el poder de voluntad, el deseo interior, la valentia.</li>
 <li><b>Poseer el conocimiento</b>: Por mas que tengamos habilidad y actitud, en medio de la tormenta no vamos a adquirir
 el conocimiento si no lo tenemos de antes.</li>
-<br />
 <br />
 <img src="100_0290.jpg" width=300 />
 <img src="100_0291.jpg" width=300 />
