--- a/spanish/dm/es_index.html
+++ b/spanish/dm/es_index.html
@@ -1,12 +1,9 @@
-<html>
-<head>
 <meta charset="UTF-8">
-</head>
 <body style="font-family: Arial;">
 <center>
 <table width="900px">
 <tr><td>
-<h1>Datamining</h1>
+<h1>Datamining / Datascience</h1>
 Para hacer Datamining y descubrimiento del conocimiento se necesitan Datos.  Aunque estemos
 rodeados de datos, muchos no se pueden utilizar con libertad por ser privados abarcados por
 licencias y terminos de uso que casi nadie lee.<br /><br />
@@ -39,5 +36,3 @@ la relación entre actores que trabajan juntos.
 <a href="Lamagna.pdf" />Análisis de Red Social de Actores</a>
 </td></tr></table>
 </center>
-</body>
-</html>
