--- a/english/central.html
+++ b/english/central.html
@@ -15,7 +15,7 @@ This page will be where I attempt to organize projects of interest. I've gained 
 <br />
 <br />
 Mi <a href="https://www.linkedin.com/in/walter-lamagna/" target="_new">Linkedin</a>,
-<a href="https://twitter.com/walamagna" target="_new">Twitter</a>, 
+<a href="https://x.com/WalterLamagna" target="_new">Twitter</a>, 
 <a href="https://www.instagram.com/walmagna/" target="_new">Instagram</a> and
 <a href="https://github.com/wlamagna" target="_new">Github</a>.
 <br /><br />
