--- a/spanish/central.html
+++ b/spanish/central.html
@@ -16,7 +16,7 @@ que quiero hacer tambien mi aporte, como una forma de retribuir.
 <br />
 <br />
 Mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_new">Linkedin</a>,
-<a href="https://twitter.com/walamagna" target="_new">Twitter</a>, 
+<a href="https://x.com/WalterLamagna" target="_new">Twitter</a>, 
 <a href="https://www.instagram.com/walmagna/" target="_new">Instagram</a> y 
 <a href="https://github.com/wlamagna" target="_new">Github</a>.
 <br /><br />
