--- a/spanish/cert/index.html
+++ b/spanish/cert/index.html
@@ -1,9 +1,4 @@
-<html>
-<head>
 <meta charset="UTF-8">
-<title>Walter - Mi Pagina web !</title>
-</head>
-<body style="font-family: Arial;">
 <br />
 <center>
 <table width="900">
@@ -29,20 +24,8 @@ Finalmente me enviaron el certificado y significo una gran felicidad tras tanto 
 <img src="20210617_102724~2.jpg" width=200 />
 <br />
 <br />
-Tengo otros cursos hechos por Coursera pero no voy a detallarlos aqui, estan en 
+Tengo otros cursos hechos por Coursera, estan en 
 <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target=_new>Linkedin</a>.
-<br />
-<br />
-Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
-Si hay algún tema que le gustaría que desarrolle en el blog, simplemente coménteme.
 <br /><br />
-<br />
-<a href="/webpage/">Inicio</a>
 </td></tr></table>
 </center>
-<br />
-
-<br />
-<br />
-</body>
-</html>
