--- a/english/central.html
+++ b/english/central.html
@@ -24,8 +24,8 @@ Open Data from Legislative Elections in the City of Buenos Aires."
 <ul>
 <li><a href="android/">Experiments with Android</a></li>
 <li><a href="https://github.com/wlamagna/perl" target="_new">Perl projects</a></li>
-<li>Mantengo dos distros personalizadas de <a href="linux.html">Linux</a>.</li>
-<li>Notas sobre <a href="windsurf/">Windsurf</a>.</li>
+<li>About a <a href="linux.html">Linux</a> Distro i maintain.</li>
+<li>Brian dumps about <a href="windsurf/">Windsurf</a>.</li>
 </ul>
 </td></tr></table>
 </center>
