--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Walter Marcelo Lamagna - Home Page</title>
-<link rel="shortcut icon" href="/favicon.ico?v=6cd6089ee7f6">
+<link rel="shortcut icon" href="favicon.ico?v=6cd6089ee7f6">
 </head>
 
 <frameset rows="50,*" border="0">
